# Physixed

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: kinematics_test.yml  release.yml  release_backend.yml  release_frontend.yml  test_apps.yml
backend/: .pre-commit-config.yaml  .releaserc  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/base/: __init__.py  apps.py  serializers.py  urls.py  views.py
backend/base/pytools/: __init__.py  exceptions.py  utils.py
backend/base/tests/: __init__.py  test_tools.py  test_urls.py  test_views.py
backend/kinematics/: Untitled.ipynb  apps.py  serializers.py  urls.py  views.py
backend/kinematics/pytools/: __init__.py  air_res.py  base_fall.py  free_fall.py  lineplot.py  utils.py
backend/kinematics/tests/: __init__.py  test_air_res.py  test_free_fall.py  test_tools.py
backend/physixed/: asgi.py  px_development_apps.py  settings.py  testing_settings.py  urls.py  wsgi.py
frontend/: .gitignore  .releaserc  CHANGELOG.md  custom.d.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: main.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(home)/: index.css  page.tsx
frontend/src/app/(home)/_components/: Benefits.tsx  Contact.tsx  ContactForm.tsx  Hero.tsx  HeroCards.tsx  HeroImage.tsx  benefits.tsx  contact-button.tsx  contact.tsx  hero-image.tsx  hero.tsx
frontend/src/app/(home)/_components/ui/: BenefitCards.tsx  benefitCards.tsx
frontend/src/app/kinematics/: page.tsx
frontend/src/app/kinematics/_components/: freeFallContainer.tsx  freeFallForm.tsx  freeFallPlot.tsx  heightPlot.tsx  line-plot.tsx  plot-container.tsx  plot.tsx
frontend/src/app/kinematics/_components/ui/: app-links.tsx  heading.tsx
frontend/src/app/kinematics/air-resistance/: page.tsx
frontend/src/app/kinematics/air-resistance/_components/: air-res-container.tsx  air-res-form.tsx
frontend/src/app/kinematics/free-fall/: page.tsx
frontend/src/app/kinematics/free-fall/_components/: free-fall-container.tsx  freeFallContainer.tsx  freeFallForm.tsx  plot.tsx
frontend/src/app/kinematics/freefall/: page.tsx
frontend/src/app/kinematics/freefall/_components/: freeFallContainer.tsx  plot.tsx
frontend/src/common/assets/: logo.xbm
frontend/src/common/components/: Logo.tsx  Nav.tsx  NavLinks.tsx
frontend/src/common/layout/: Footer.tsx  Header.tsx  MainLayout.tsx  NavBar.tsx
frontend/src/common/pages/: Home.tsx  NotFound404.tsx
frontend/src/common/providers/: AppProvider.tsx
frontend/src/common/routers/: RootRouters.tsx
frontend/src/components/: Card.tsx  Header.tsx  MainLayout.tsx  NavLinks.tsx  footer.tsx  graph.tsx  header.tsx  icons.tsx  logo.tsx
frontend/src/components/icons/: icons.tsx  logo.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Logo.tsx  NavLinks.tsx  footer.tsx  header.tsx  main-nav.tsx  mobile-nav.tsx  nav-menu.tsx  navLinks.tsx  theme-toggle.tsx  themeProvider.tsx
frontend/src/components/ui/: Card.tsx  Graph.tsx  Label.tsx  application-card.tsx  button.tsx  cardWrapper.tsx  navigation-menu.tsx  page-heading.tsx
frontend/src/lib/: data.ts  helpers.ts  types.ts  utils.ts
physixed/: asgi.py  px_development_apps.py  px_production_apps.py  settings.py  urls.py  wsgi.py
